probleme z-index fixed

--- a/cards.css
+++ b/cards.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color: #f9f9f9;
+  background-color: #ecebeb;
   box-shadow: 0px 1px #faf0f3;
   border: 1px solid #faf0f3;
   border-radius: 9px;
@@ -36,8 +36,12 @@
   background-image: url("./pictures/kevin.jpg");
   width: 100%;
   height: 40%;
+  filter: sepia(0.3);
 }
 
+.card:hover .cardImg {
+  filter: sepia(0);
+}
 
 .cardName {
   padding: 16px 16px 4px 16px;
