--- a/nav.css
+++ b/nav.css
@@ -11,6 +11,7 @@
     background-color: rgba(255, 255, 255, 0.9); */
     background-color: white;
     border-bottom: 1px solid #ccc;
+    z-index: 1;
 }
 
 /* Logo ---------------------------------------------------- */
