--- a/search.css
+++ b/search.css
@@ -20,10 +20,24 @@
     outline: none;
 }
 
+#searchBar::-ms-clear {
+    display: none;
+    width: 0;
+    height: 0;
+}
+
+#searchBar::-ms-reveal {
+    display: none;
+    width: 0;
+    height: 0;
+}
+
+/* clears the ‘X’ from Chrome */
+#searchBar::-webkit-search-decoration, #searchBar::-webkit-search-cancel-button, #searchBar::-webkit-search-results-button, #searchBar::-webkit-search-results-decoration {
+    display: none;
+}
+
 .searchIcon {
-    /* position: absolute;
-    top: 7px;
-    right: 20px; */
     position: relative;
     right: 28px;
     display: inline-block;
